--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-
+  background-color: aqua;
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 /* Style the header */
 header {
-  background-color:1D428;
+  background-color:32CD32;
   padding: 30px;
   text-align: center;
   font-size: 35px;
@@ -55,7 +59,7 @@ section:after {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color:32CD32;
   padding: 10px;
   text-align: center;
   color: white;
@@ -72,34 +76,30 @@ footer {
 </head>
 <body>
 
-<h2>Uber Plant Care</h2>
-<p>A simple group of friends from the same Street who grew up with just a Ball and a Dream (Reapers Nation)</p>
-<p>A Small Town basketball team that hailed from East MarredPally</p>
-
 <header>
-  <h2>Uber Plant Care</h2>
+    <h2>Uber Plant Care</h2>
+    <p>We are there wile your away to take care of your plants</p>
+    <p>Service to Nature is Service to the world</p>
 </header>
 
 <section>
   <nav>
-    <header>Players List</header>
-    <ul>
-      <li>Nirmal Sunadam</li>
-      <li>Hemanth Sunadam</li>
-      <li>Stanley Jessie</li>
-      <li>Sanjay Joushua</li>
-      <li>Mengan Akhilesh</li>
-      <li>Manav P</li>
-      <li>Vijay Kumar</li>
-      <li>Darius Savio</li>
-      <li>Arnold Savio</li>
-    </ul>
+    <header>Why Plant Home Care </header><br>
+    <p>Are you frequently travelling on Vacations, Business Trips, Emergencies ??</p><br>
+    <p>Dont Worry Uber Plant Care to the Resque</p> <br><br>
+
+    <div>
+        <h1>What to Expect from us ??</h1>
+
+        <p>Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.</p>
+    </div>
   </nav>
   
   <article>
    <p>
 
    <bold> # Uber Plant Care </bold> 
+   <br>
 
 
    The goal of this project is to make sure that We bring together all the Nature Lovers & Create uber like enviroment for people who grow plants at home and have to frequently on business trip, vacations, emergencies etc.
@@ -118,9 +118,9 @@ footer {
 </section>
 
 <footer>
-  <p>Basekball is Life In Marredpally.</p>
-  <p>Kobe Bryant is God ! MarredPally Reapers would like with a heavy heart convey deepest condolence to the Greatest Kobe Bryant's Family </p>
-  <p> Kobe & GiGi for Ever !</p>
+  <p>Its our Responsibility to Take care of Nature</p>
+  <p>We Are Bring a Uber like experience for Busy Travellers ! Just drop your trees and have piece of mind after till you return</p>
+  <p> One who cares for the Nature cares for the world- Nikhila Surayapalem</p>
 </footer>
 
 </body>
