--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@ body {
 
 /* Style the header */
 header {
-  background-color:32CD32;
+  background-color:transparent;
   padding: 30px;
   text-align: center;
-  font-size: 35px;
   color: white;
 }
 
