--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ footer {
     <div>
         <h1>What to Expect from us ??</h1>
 
-        <p>Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.</p>
+      <h4>  Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.</h4>
     </div>
   </nav>
   
