--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ footer {
 
 <section>
   <nav>
-    <header>Why Plant Home Care </header><br>
+    <h4>Why Plant Home Care </h4><br>
     <p>Are you frequently travelling on Vacations, Business Trips, Emergencies ??</p><br>
     <p>Dont Worry Uber Plant Care to the Resque</p> <br><br>
 
