--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: aqua;
-  background-image: url('img_girl.jpg');
+  background-color: green;
+  background-image: url("/w3images/photographer.jpg");
+  height: 500px;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  opacity:0.2;
 }
 
 /* Style the header */
