--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: green;
   background-image: url("/w3images/photographer.jpg");
-  height: 500px;
+  height: 200px;
+  position:fixed;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  opacity:0.2;
+  opacity:0.1;
 }
 
 /* Style the header */
@@ -41,6 +42,11 @@ nav {
 nav ul {
   list-style-type: none;
   padding: 0;
+}
+
+.text {
+font-size: 14px;
+overflow: auto;
 }
 
 article {
@@ -92,7 +98,7 @@ footer {
     <div>
         <h1>What to Expect from us ??</h1>
 
-      <h4>  Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.</h4>
+      <p class="text">  Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.</p>
     </div>
   </nav>
   
