--- a/index.html
+++ b/index.html
@@ -95,11 +95,6 @@ footer {
     <p>Are you frequently travelling on Vacations, Business Trips, Emergencies ??</p><br>
     <p>Dont Worry Uber Plant Care to the Resque</p> <br><br>
 
-    <div>
-        <h1>What to Expect from us ??</h1>
-
-      <p class="text">  Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.</p>
-    </div>
   </nav>
   
   <article>
@@ -107,16 +102,17 @@ footer {
 
    <bold> # Uber Plant Care </bold> 
    <br>
-
-
-   The goal of this project is to make sure that We bring together all the Nature Lovers & Create uber like enviroment for people who grow plants at home and have to frequently on business trip, vacations, emergencies etc.
    
    Dr Nikhila Surayapalem 
    
    Daughter of a Enviromental Engineer & Enviroment came up with a beautiful idea to support care taking of Trees in a uber like model.She's currently working with her team on building the website to address the same. 
    
-   Things to lookout for 
+   The goal of this project is to make sure that We bring together all the Nature Lovers & Create uber like enviroment for people who grow plants at home and have to frequently on business trip, vacations, emergencies etc.
    
+   Things to lookout for 
+  
+  
+ Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.  
 
 
 
