--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: green;
+  background-color:transparent;
   background-image: url("/w3images/photographer.jpg");
   height: 200px;
   position:fixed;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  opacity:0.1;
+  opacity:0.2;
 }
 
 /* Style the header */
@@ -44,10 +44,6 @@ nav ul {
   padding: 0;
 }
 
-.text {
-font-size: 14px;
-overflow: auto;
-}
 
 article {
   float: left;
@@ -107,9 +103,11 @@ footer {
    
    Daughter of a Enviromental Engineer & Enviroment came up with a beautiful idea to support care taking of Trees in a uber like model.She's currently working with her team on building the website to address the same. 
    
+   <br>
    The goal of this project is to make sure that We bring together all the Nature Lovers & Create uber like enviroment for people who grow plants at home and have to frequently on business trip, vacations, emergencies etc.
-   
+   <br>
    Things to lookout for 
+   <br>
   
   
  Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.  
