--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color:transparent;
-  background-image: url("/w3images/photographer.jpg");
-  height: 200px;
+  height: 200px !important;
   position:fixed;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  opacity:0.2;
+  opacity:0.1;
 }
 
 /* Style the header */
@@ -98,18 +93,17 @@ footer {
 
    <bold> # Uber Plant Care </bold> 
    <br>
+
+   <h2> Dr Nikhila Surayapalem </h2>
+    <p> Daughter of a Enviromental Engineer & Enviroment came up with a beautiful idea to support care taking of Trees in a uber like model.She's currently working with her team on building the website to address the same. 
+    </p>
+    <p> The goal of this project is to make sure that We bring together all the Nature Lovers & Create uber like enviroment for people who grow plants at home and have to frequently on business trip, vacations, emergencies etc.
+    </p>
    
-   Dr Nikhila Surayapalem 
-   
-   Daughter of a Enviromental Engineer & Enviroment came up with a beautiful idea to support care taking of Trees in a uber like model.She's currently working with her team on building the website to address the same. 
-   
-   <br>
-   The goal of this project is to make sure that We bring together all the Nature Lovers & Create uber like enviroment for people who grow plants at home and have to frequently on business trip, vacations, emergencies etc.
-   <br>
-   Things to lookout for 
-   <br>
+  <p> Things to lookout for </p>
   
   
+  <p>
  Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.  
 
 
