--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  height: 200px !important;
+  height: 80px !important;
+  color: green;
   position:fixed;
-  opacity:0.1;
+  opacity:1;
 }
 
 /* Style the header */
 header {
-  background-color:transparent;
   padding: 30px;
   text-align: center;
   color: white;
