--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 header {
   padding: 30px;
   text-align: center;
-  color: white;
+  color: green;
 }
 
 /* Create two columns/boxes that floats next to each other */
@@ -60,7 +60,7 @@ footer {
   background-color:32CD32;
   padding: 10px;
   text-align: center;
-  color: white;
+  color: green;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
