--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ footer {
   
   
   <p>
- Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till your come back.  
+ Our Team is currently working a one stop experience that can work like a uber like service model where we can drop your plants while your away and have piece of mind till you come back.  
 
 
 
