--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   height: 80px !important;
+  overflow: scroll;
   color: green;
   position:fixed;
   opacity:1;
