--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ header {
   padding: 30px;
   text-align: center;
   color: green;
+  background-color: mediumaquamarine;
 }
 
 /* Create two columns/boxes that floats next to each other */
@@ -58,7 +59,7 @@ section:after {
 
 /* Style the footer */
 footer {
-  background-color:32CD32;
+  background-color:black;
   padding: 10px;
   text-align: center;
   color: green;
