--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@ footer {
 <header>
     <h2>Uber Plant Care</h2>
     <p>We are there wile your away to take care of your plants</p>
-    <p>Service to Nature is Service to the world</p>
 </header>
 
 <section>
@@ -115,7 +114,7 @@ footer {
 </section>
 
 <footer>
-  <p>Its our Responsibility to Take care of Nature</p>
+  <p>Its our Responsibility to Take care of Nature ! Service to Nature is Service to the world</p>
   <p>We Are Bring a Uber like experience for Busy Travellers ! Just drop your trees and have piece of mind after till you return</p>
   <p> One who cares for the Nature cares for the world- Nikhila Surayapalem</p>
 </footer>
