--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ footer {
 
 <header>
     <h2>Uber Plant Care</h2>
-    <p>We are there wile your away to take care of your plants</p>
+    <p>We are there while your away to take care of your plants</p>
 </header>
 
 <section>
